Issue/31 exercise info (#53)
* Resolved issue #31

* Fixed routes, issue resolved

* Added onClick to the links to make backdrop disappear.

* Update back button to have option not to provide URL in order to act as a generic back button.

* Cleaned up the text and removed route

* WIP issue 31, need styling for links

* Made separate paragraphs in info.js

* Added h2 to info.js

* Removed unused variants of typography

* Added p again

* Removed unused import

* changed classname to be more consistent

* Made back button not look like button if it was a button (#55)

--- a/src/Components/BackNav/BackNav.css
+++ b/src/Components/BackNav/BackNav.css
@@ -4,6 +4,11 @@
     justify-content: flex-start;
     text-decoration: none;
     margin: 12px 0;
+
+    background: none;
+    border: none;
+    box-shadow: none;
+    cursor: pointer;
 }
 
 .BackNav-arrow {
